# HW_10_WEB

./: .env  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
hw10_project/hw10_project/: .env  settings.py  urls.py
hw10_project/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
hw10_project/quotes/migrations/: 0001_initial.py  0002_remove_author_created_at_remove_quote_created_at.py
hw10_project/quotes/static/quotes/: style.css
hw10_project/quotes/templates/quotes/: about.html  add_author.html  add_quote.html  base.html  index.html  tag.html
hw10_project/quotes/templatetags/: extract.py
hw10_project/users/: forms.py  models.py  urls.py  views.py
hw10_project/users/migrations/: 0001_initial.py
hw10_project/users/templates/users/: login.html  logout.html  password_reset_complete.html  profile.html  register.html
hw10_project/utils/: .env  add_quotes_to_mongo.py  docker-compose.yaml  main.py  migration.py  models.py  seed.py
hw10_project/utils/data/: authors.json  quotes.json
